# obstaclespaceecho

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build-release.yml  build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ShimmerChorus.h  SpringReverb.h  TapeDelay.h  TapeNoise.h
Source/UI/: IndustrialLookAndFeel.h  ModeSelector.h  OscilloscopeComponent.h  TapeReelComponent.h  VUMeter.h
